--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
       "prefer-destructuring": ["error", {"object": false, "array": false}],
       "operator-assignment": ["error", "never"],
       "no-underscore-dangle":["error", { "allow": ["_id"] }],
+      "spaced-comment": ["error", "never"],
       "max-len": [
         "error",
         {
