--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
       "operator-assignment": ["error", "never"],
       "no-underscore-dangle":["error", { "allow": ["_id"] }],
       "spaced-comment": ["error", "never"],
+      "prefer-template": ["error", "never"],
       "max-len": [
         "error",
         {
