Add a Read.me file

--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
-FLASK_APP=server.app:app
+PRODUCTION=False
+jwt_secret_key=123
+database_url=mongodb+srv://wedding_gallery:wedding_gallery@cluster0.gbp8l.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+s3_bucket=danilo-medeiros
+aws_access_key_id=AKIA5CMQBFZUJ77QNN6U
+aws_secret_access_key=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
